Added demo GIF.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="./images/ag-icon.png" sizes="16x16" alt="Icon">
+    <link rel="icon" type="image/png" href="./images/ag-icon.png" sizes="32x32" alt="Icon">
   </head>
   <body>
     <div class="wrapper">
